--- a/src/_data/speakers.yml
+++ b/src/_data/speakers.yml
@@ -9,6 +9,9 @@
   first_name: Anita
   last_name: Jaszewska
   photo_url: /images/speakers/anita-jaszewska.jpg
+  twitter_handle: anita_jaszewska
+  bio: |
+    Anita is a self-learner who entered the Ruby world in 2013 as a backend developer. Since then, she has started a master’s degree in psychology. Initially a hobby, with time, psychology turned into a valuable experience that helped her transition to a managerial path in IT.
 - id: charles-nutter
   first_name: Charles Oliver
   last_name: Nutter
@@ -27,6 +30,8 @@
   first_name: Jeremy
   last_name: Evans
   twitter_handle: jeremyevans0
+  bio: |
+    Jeremy Evans is a Ruby committer who focuses on fixing bugs in Ruby. He the lead developer of the Sequel database library, the Roda web toolkit, the Rodauth authentication framework, and many other Ruby libraries. He is the author of “Polished Ruby Programming”.
   photo_url: /images/speakers/jeremy-evans.jpg
 - id: jonatas-davi
   first_name: Jônatas
@@ -62,11 +67,14 @@
   twitter_handle: nusco
   photo_url: /images/speakers/paolo-perrotta.jpg
   bio: |
-    Paolo Perrotta is the author of "Metaprogramming Ruby" and "Programming Machine Learning". He's been coding for most of his life, ranging from embedded to enterprise software, computer games, and web apps. He lives in Bologna, Italy.
+    Paolo Perrotta is the author of “Metaprogramming Ruby” and “Programming Machine Learning”. He's been coding for most of his life, ranging from embedded to enterprise software, computer games, and web apps. He lives in Bologna, Italy.
 - id: rtdp
-  first_name: rtdp
+  first_name: Ratnadeep
+  last_name: Deshmane
   twitter_handle: rtdp
   photo_url: /images/speakers/rtdp.jpg
+  bio: |
+    Ratnadeep (rtdp), is a software craftsman, an entrepreneur and work with Ruby for the past 13 years. He runs a Rails consulting company BetaCraft Technologies. Earlier he was a digital nomad and changed his location every few weeks, coding Ruby and exploring places.
 - id: rodrigo-urubatan
   first_name: Rodrigo
   last_name: Urubatan Ferreira Jardim
@@ -79,6 +87,8 @@
   last_name: Small
   twitter_handle: selenasmall88
   photo_url: /images/speakers/selena-small.jpg
+  bio: |
+    Selena is a full-stack lead engineer at Fresho in Melbourne Australia who is particularly passionate about TDD. As a self-taught coder with a background in management, she is well-equipped to mentor others. In her spare time, she is a nak muay ying, a professional kickboxer.
 - id: siddharth-sharma
   first_name: Siddharth
   last_name: Sharma
