List speakers into two sections

--- a/src/_data/menu/header.yml
+++ b/src/_data/menu/header.yml
@@ -4,5 +4,7 @@
   permalink: /practicalities
 - title: Schedule
   permalink: /schedule
+- title: Speakers
+  permalink: /speakers
 - title: Sponsors
   permalink: /sponsors
