--- a/src/_data/sponsors.yml
+++ b/src/_data/sponsors.yml
@@ -23,6 +23,11 @@
   logo_url: /images/sponsors/fresho.svg
   url: "http://www.fresho.com/"
   level: speaker
+- name: GetLinks
+  about: "GetLinks is the leading technology recruiting platform in South East Asia, having helped thousands of tech talents to work at tech companies as well as helping major corporates like Accenture, L’Oreal, SCG, CP Group, to achieve digital transformation through building digital teams."
+  logo_url: /images/sponsors/getlinks.svg
+  url: "https://www.getlinks.com/"
+  level: silver
 - name: Honeybadger
   about: "Honeybadger is the error, uptime, and cron monitoring tool built for you, the developer who cares about a quality product and happy customers."
   logo_url: /images/sponsors/honeybadger.svg
