--- a/src/_data/schedule/day_one.yml
+++ b/src/_data/schedule/day_one.yml
@@ -57,3 +57,4 @@
 - start_at: "18:00"
   end_at: "22:00"
   title: "Official Party 🥳"
+  subtitle: "at Bangkok Heritage, 2 Phaya Thai Rd, Thung Phaya Thai, Ratchathewi, Bangkok 10400"
