--- a/src/_data/schedule/day_one.yml
+++ b/src/_data/schedule/day_one.yml
@@ -8,6 +8,7 @@
   end_at: "9:55"
   title: "Keynote: A Beginner's Guide to Puma Internals"
   speaker_id: nate-berkopec
+  slides_url: https://github.com/nateberkopec/rubyconfth/blob/main/RubyConfTH.pdf
 - start_at: "10:00"
   end_at: "10:30"
   title: "A Rails performance guidebook: from 0 to 1B requests/day"
@@ -34,6 +35,7 @@
   end_at: "14:30"
   title: "Scaling Ruby with JRuby"
   speaker_id: charles-nutter
+  slides_url: https://speakerdeck.com/headius/scaling-ruby-with-jruby
 - start_at: "14:35"
   end_at: "15:05"
   title: "10x your teamwork through pair programming"
