--- a/src/_data/schedule/day_two.yml
+++ b/src/_data/schedule/day_two.yml
@@ -39,6 +39,7 @@
   end_at: "15:05"
   title: "Processing data: Ruby or SQL?"
   speaker_id: jonatas-davi
+  slides_url: "https://docs.google.com/presentation/d/e/2PACX-1vST6o2xxkIuNddKwWeXgNENN2-Fcpwe2m9Ax-Z4j6q0V7vjX-GUISxAt6Oj75OFUZ7KQbSI3CLbKI3l/pub?start=false&loop=false&delayms=3000&slide=id.g198c5a1f7c9_0_16580"
 - start_at: "15:05"
   end_at: "15:35"
   title: "Coffee Break"
