--- a/src/_data/menu/header.yml
+++ b/src/_data/menu/header.yml
@@ -1,7 +1,7 @@
 - title: CFP
   permalink: /cfp
-# - title: Venue
-#   permalink: /venue
+- title: Venue
+  permalink: /venue
 - title: Practicalities
   permalink: /practicalities
 # - title: Schedule
