--- a/src/_data/sponsors.yml
+++ b/src/_data/sponsors.yml
@@ -3,4 +3,8 @@
   logo_url: /images/sponsors/appsignal.svg
   url: "https://www.appsignal.com/"
   level: silver
-  
+- name: Eventpop
+  about: "Eventpop is an end-to-end event solution that enhances the seamless event experience. Eventpop แพลตฟอร์มจำหน่ายบัตรที่ตอบโจทย์ทุกงานอีเวนต์."
+  logo_url: /images/sponsors/eventpop.png
+  url: "https://www.eventpop.me/"
+  level: gold
