Fix spelling issue

--- a/src/_data/speakers.yml
+++ b/src/_data/speakers.yml
@@ -21,7 +21,7 @@
   bio: |
 - id: jemma-issroff
   first_name: Jemma
-  last_name: Isroff
+  last_name: Issroff
   twitter_handle: jemmaissroff
   photo_url: /images/speakers/jemma.jpg
   type: keynote
