--- a/src/_data/speakers.yml
+++ b/src/_data/speakers.yml
@@ -31,5 +31,5 @@
   last_name: Halpern
   twitter_handle: bendhalpern
   photo_url: /images/speakers/ben.jpg
-  type: speaker
+  type: keynote
   bio: Ben is the creator of DEV and founder of Forem, one of the largest commercial open source Ruby applications. Ben has been writing Ruby code since 2010.
