--- a/src/_data/sponsors.yml
+++ b/src/_data/sponsors.yml
@@ -8,3 +8,8 @@
   logo_url: /images/sponsors/eventpop.png
   url: "https://www.eventpop.me/"
   level: gold
+- name: Oivan
+  about: "We believe that extraordinary expertise in design and technology can solve some of the world's biggest challenges."
+  logo_url: /images/sponsors/oivan.svg
+  url: "https://oivan.com/"
+  level: gold
