git commit -m "add draft speaker list"

--- a/src/_data/menu/header.yml
+++ b/src/_data/menu/header.yml
@@ -6,8 +6,8 @@
   permalink: /practicalities
 # - title: Schedule
 #   permalink: /schedule
-# - title: Speakers
-#   permalink: /speakers
+- title: Speakers
+  permalink: /speakers
 # - title: Sponsors
 #   permalink: /sponsors
 - title: Code of Conduct
