--- a/src/_data/speakers.yml
+++ b/src/_data/speakers.yml
@@ -33,3 +33,45 @@
   photo_url: /images/speakers/ben.jpg
   type: keynote
   mini_bio: Creator of DEV, founder of Forem
+- id: matthew-lindfield-seager
+  first_name: Matthew
+  last_name: Lindfield Seager
+- id: helio-cola
+  first_name: Helio
+  last_name: Cola
+- id: brad-urani
+  first_name: Brad
+  last_name: Urani
+- id: faraaz-ahmad
+  first_name: Syed Faraaz
+  last_name: Ahmad
+- id: huy-du
+  first_name: Huy
+  last_name: Du
+- id: hitoshi-hasumi
+  first_name: Hitoshi
+  last_name: Hasumi
+- id: omar-sotillo-franco
+  first_name: Omar Sotillo
+  last_name: Franco
+- id: steven-r-baker
+  first_name: Steven R.
+  last_name: Baker
+- id: elle-meredith
+  first_name: Elle
+  last_name: Meredith
+- id: rishi-jain
+  first_name: Rishi
+  last_name: Jain
+- id: benji-lewis
+  first_name: Benji
+  last_name: Lewis
+- id: michael-milewski
+  first_name: Michael
+  last_name: Milewski
+- id: chakrit-wichian
+  first_name: Chakrit
+  last_name: Wichian
+- id: radoslav-stankov
+  first_name: Radoslav
+  last_name: Stankov
