--- a/src/_data/speakers.yml
+++ b/src/_data/speakers.yml
@@ -45,6 +45,7 @@
   first_name: Matthew
   last_name: Lindfield Seager
   type: speaker
+  photo_url: /images/speakers/placeholder.png
 - id: helio-cola
   first_name: Helio
   last_name: Cola
@@ -60,47 +61,59 @@
   first_name: Brad
   last_name: Urani
   type: speaker
+  photo_url: /images/speakers/placeholder.png
 - id: faraaz-ahmad
   first_name: Syed Faraaz
   last_name: Ahmad
   type: speaker
+  photo_url: /images/speakers/placeholder.png
 - id: huy-du
   first_name: Huy
   last_name: Du
   type: speaker
+  photo_url: /images/speakers/placeholder.png
 - id: hitoshi-hasumi
   first_name: Hitoshi
   last_name: Hasumi
   type: speaker
+  photo_url: /images/speakers/placeholder.png
 - id: omar-sotillo-franco
   first_name: Omar Sotillo
   last_name: Franco
   type: speaker
+  photo_url: /images/speakers/placeholder.png
 - id: steven-r-baker
   first_name: Steven R.
   last_name: Baker
   type: speaker
+  photo_url: /images/speakers/placeholder.png
 - id: elle-meredith
   first_name: Elle
   last_name: Meredith
   type: speaker
+  photo_url: /images/speakers/placeholder.png
 - id: rishi-jain
   first_name: Rishi
   last_name: Jain
   type: speaker
+  photo_url: /images/speakers/placeholder.png
 - id: benji-lewis
   first_name: Benji
   last_name: Lewis
   type: speaker
+  photo_url: /images/speakers/placeholder.png
 - id: michael-milewski
   first_name: Michael
   last_name: Milewski
   type: speaker
+  photo_url: /images/speakers/placeholder.png
 - id: chakrit-wichian
   first_name: Chakrit
   last_name: Wichian
   type: speaker
+  photo_url: /images/speakers/placeholder.png
 - id: radoslav-stankov
   first_name: Radoslav
   last_name: Stankov
   type: speaker
+  photo_url: /images/speakers/placeholder.png
