--- a/src/_data/speakers.yml
+++ b/src/_data/speakers.yml
@@ -45,7 +45,7 @@
   first_name: Matthew
   last_name: Lindfield Seager
   type: speaker
-  photo_url: /images/speakers/placeholder.png
+  photo_url: /images/speakers/matthew-ls.jpg
 - id: helio-cola
   first_name: Helio
   last_name: Cola
@@ -66,7 +66,7 @@
   first_name: Syed Faraaz
   last_name: Ahmad
   type: speaker
-  photo_url: /images/speakers/placeholder.png
+  photo_url: /images/speakers/faraaz-ahmad.jpg
 - id: huy-du
   first_name: Huy
   last_name: Du
@@ -76,7 +76,7 @@
   first_name: Hitoshi
   last_name: Hasumi
   type: speaker
-  photo_url: /images/speakers/placeholder.png
+  photo_url: /images/speakers/hitoshi-hasumi.jpg
 - id: omar-sotillo-franco
   first_name: Omar Sotillo
   last_name: Franco
@@ -96,7 +96,7 @@
   first_name: Rishi
   last_name: Jain
   type: speaker
-  photo_url: /images/speakers/placeholder.png
+  photo_url: /images/speakers/rishi-jain.jpg
 - id: benji-lewis
   first_name: Benji
   last_name: Lewis
@@ -116,4 +116,4 @@
   first_name: Radoslav
   last_name: Stankov
   type: speaker
-  photo_url: /images/speakers/placeholder.png
+  photo_url: /images/speakers/radoslav-stankov.jpg
